# xdotool-gui

./: .gitignore  ARCHITECTURE.md  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  README.md  pyproject.toml  requirements.txt
packaging/: PKGBUILD  xdotool-gui.desktop
src/xdotool_gui/: __init__.py  autoclicker.py  automation.py  command_builder.py  config.py  executor.py  hotkey_registry.py  main.py  main_window.py  models.py  tabs.py
src/xdotool_gui/resources/themes/: default.qss
src/xdotool_gui/services/: hotkeys.py  recorder.py  runtime.py  x11.py
tests/: test_macro_editor.py  test_recorder_service.py
