[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xdotool-gui"
version = "0.1.0"
description = "Lightweight PySide6 frontend for xdotool"
readme = "README.md"
requires-python = ">=3.13"
license = "GPL-3.0-or-later"
authors = [{ name = "Codex" }]
dependencies = ["PySide6>=6.7", "pynput>=1.7.7", "python-xlib>=0.33"]

[project.scripts]
xdotool-gui = "xdotool_gui.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
xdotool_gui = ["resources/icons/*.svg", "resources/themes/*.qss"]
